[package]
name = "bletroller"
version = "0.0.1"
authors = ["Simon Willshire"]
edition = "2021"
readme = "README.md"

[dependencies]
bl602-hal = { path = "./hal" }
embedded-hal = "=1.0.0-alpha.5"
embedded-time = "0.12.0"
panic-halt = "0.2.0"
riscv = "0.10.0"
riscv-rt = "0.11.0"

[[bin]]
name = "bletroller"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
